loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:4: error: not found: value EstsurBlanc
} while (EstsurBlanc==false) 
         ^